0027247: Eliminate remaining compiler warnings in MFC samples and with OCCT_DEBUG

Unsafe and useless casts of handles are eliminated